parsing ERP response

--- a/app/assets/stylesheets/sign-up.sass
+++ b/app/assets/stylesheets/sign-up.sass
@@ -98,7 +98,7 @@ input.input-1
       padding: 0
     li
       float: left
-    .ddd
+    .phone_code
       width: 55px
       input
         background: image-url("bg-input-2.png") no-repeat scroll center center transparent
