basic lead subscribe and leads counter added to unities

--- a/app/views/home/_unity.html.haml
+++ b/app/views/home/_unity.html.haml
@@ -1,7 +1,7 @@
 .unity.result-unity{ id: "unity_"+unity.id.to_s }
   .result-left
     /= submit_tag "Inscrever", class: "subscribe_button btn-search-sign-in", "data-id" => unity.id.to_s
-    = link_to "Inscrever", "/inscricao/#{unity.id.to_s}"
+    = link_to "Inscrever", "/inscricao/#{unity.id.to_s}", class: 'subscribe'
 
     %span Inscreva-se agora e ganhe desconto na matrícula
   .result-center
