--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -57,4 +57,30 @@
       %li 09. Estude através do celular com o Wizclass
       %li 10. Certificação TOEIC
 
-= javascript_include_tag "https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places", "google_autocomplete"
+:javascript
+
+  function initialize() {
+    var input = document.getElementById('address-search-field');
+    var options = {
+      types: ['geocode'],
+      componentRestrictions: {country: 'br'}
+    };
+    var autocomplete = new google.maps.places.Autocomplete(input, options);
+
+    google.maps.event.addDomListener(input, 'keydown', function(e) {
+      if (e.keyCode == 13) { // hits enter
+        var geocoder = new google.maps.Geocoder();
+        geocoder.geocode({ 'address': input.value }, function(results, status) {
+          if (status == google.maps.GeocoderStatus.OK) {
+            console.log(results);
+  					$('#lead_latitude').val(results[0].geometry.location.Xa)
+  					$('#lead_longitude').val(results[0].geometry.location.Ya)
+          }
+        });
+
+        e.preventDefault();
+      } 
+    });
+
+  }
+  google.maps.event.addDomListener(window, 'load', initialize);
