--- a/app/views/layouts/home.html.haml
+++ b/app/views/layouts/home.html.haml
@@ -9,6 +9,7 @@
     %meta{:content => "pt-br", "http-equiv" => "content-language"}/
     %link{:href => "/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}/
     / %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans:400,700", :rel => "stylesheet", :type => "text/css"}/
+    = javascript_include_tag "https://maps.googleapis.com/maps/api/js?sensor=false&libraries=places"
     = javascript_include_tag "home"
     = stylesheet_link_tag "application"
     = csrf_meta_tags
