--- a/app/views/home/subscribe.html.haml
+++ b/app/views/home/subscribe.html.haml
@@ -65,4 +65,4 @@
           = f.submit "Comprar Curso", class: "btn-purchase"
         #content-footer
           = link_to "« voltar", :back, id: "content-footer-link-back"
-          = link_to t('.print_voucher'), voucher_url(id: @voucher.id), id: "print-voucher"
+          = link_to t('.print_voucher'), vouchers_url(@voucher), id: "print-voucher"
