--- a/app/views/home/_product.html.haml
+++ b/app/views/home/_product.html.haml
@@ -1,5 +1,5 @@
 %label
-  = check_box_tag "lead[product_ids][]", product.id, true
+  = check_box_tag "products[]", product.id, true
   %span.your-data-text-left
     = product.name
     \:
