devise install and basic config; admin theme installed

--- a/app/assets/stylesheets/application/base.sass
+++ b/app/assets/stylesheets/application/base.sass
@@ -8,7 +8,7 @@ body
   margin: 0
   padding: 0
   font-family: 'Droid Sans', sans-serif
-  background: image-url("bg1.png") repeat-x top
+  background: image-url("application/bg1.png") repeat-x top
 
 form
   margin: 0
@@ -24,7 +24,7 @@ form
 /*header*/
 
 #bg
-  background: image-url("bg2.jpg") no-repeat center top
+  background: image-url("application/bg2.jpg") no-repeat center top
   margin: 0 auto
   height: 600px
 
@@ -42,7 +42,7 @@ form
   float: left
   margin-left: 370px
   h1 a
-    background: image-url("logo.png") no-repeat scroll 0 0 transparent
+    background: image-url("application/logo.png") no-repeat scroll 0 0 transparent
     border: medium none !important
     clear: both
     display: block
