--- a/app/assets/stylesheets/application/footer.sass
+++ b/app/assets/stylesheets/application/footer.sass
@@ -1,5 +1,5 @@
 #footer
-  background: image-url("footer-shadow.png") no-repeat scroll center top transparent
+  background: image-url("application/footer-shadow.png") no-repeat scroll center top transparent
   float: left
   margin-bottom: 20px
   margin-top: 20px
