--- a/app/assets/stylesheets/application/search-open.sass
+++ b/app/assets/stylesheets/application/search-open.sass
@@ -44,7 +44,7 @@ span.text-result-medium
     outline: medium none
     text-decoration: none
     margin-bottom: 10px
-    background: image-url("button-horarios.png") no-repeat scroll center top transparent !important
+    background: image-url("application/button-horarios.png") no-repeat scroll center top transparent !important
 
 fieldset#period
   margin-bottom: 20px
@@ -69,7 +69,7 @@ fieldset#period
           width: 520px
           margin-bottom: 10px
         input.input-4
-          background: image-url("bg-input-4.png") no-repeat scroll center center transparent
+          background: image-url("application/bg-input-4.png") no-repeat scroll center center transparent
           border: medium none
           height: 31px
           margin-bottom: 10px
@@ -94,7 +94,7 @@ fieldset#period
           width: 520px
           margin-bottom: 10px
         input.input-4
-          background: image-url("bg-input-4.png") no-repeat scroll center center transparent
+          background: image-url("application/bg-input-4.png") no-repeat scroll center center transparent
           border: medium none
           height: 31px
           margin-bottom: 10px
@@ -109,7 +109,7 @@ fieldset#period
           width: 109px
           margin-top: 7px
     &#your-data-right
-      background: image-url("bg3.jpg") no-repeat scroll center center transparent
+      background: image-url("application/bg3.jpg") no-repeat scroll center center transparent
       float: right
       height: 190px
       padding-left: 20px
@@ -173,7 +173,7 @@ fieldset
     height: 46px
     width: 206px
     input.btn-purchase
-      background: image-url("buy-course.png") no-repeat scroll center top transparent !important
+      background: image-url("application/buy-course.png") no-repeat scroll center top transparent !important
       border: medium none !important
       clear: both
       cursor: pointer
