--- a/app/assets/stylesheets/application/sign-up.sass
+++ b/app/assets/stylesheets/application/sign-up.sass
@@ -1,12 +1,12 @@
 #sign-up
-  background: image-url("box.png") no-repeat scroll center center transparent
+  background: image-url("application/box.png") no-repeat scroll center center transparent
   float: right
   height: 376px
   width: 960px
   margin-bottom: 70px
 
 #box-sign-up
-  background: image-url("box-sign-up.png") no-repeat scroll center center transparent
+  background: image-url("application/box-sign-up.png") no-repeat scroll center center transparent
   float: right
   height: 379px
   margin-right: 52px
@@ -84,7 +84,7 @@
 /*input.input-1 for multiple fields*/
 
 input.input-1
-  background: image-url("bg-input-1.png") no-repeat scroll center center transparent
+  background: image-url("application/bg-input-1.png") no-repeat scroll center center transparent
   border: medium none
   height: 31px
   margin-bottom: 10px
@@ -101,7 +101,7 @@ input.input-1
     .phone_code
       width: 55px
       input
-        background: image-url("bg-input-2.png") no-repeat scroll center center transparent
+        background: image-url("application/bg-input-2.png") no-repeat scroll center center transparent
         border: medium none
         height: 31px
         margin-bottom: 10px
@@ -110,7 +110,7 @@ input.input-1
     .phone
       width: 155px
       input
-        background: image-url("bg-input-3.png") no-repeat scroll center center transparent
+        background: image-url("application/bg-input-3.png") no-repeat scroll center center transparent
         border: medium none
         height: 31px
         margin-bottom: 10px
@@ -118,7 +118,7 @@ input.input-1
         width: 151px
   input
     &.btn
-      background: image-url("btn-sign-up.png") no-repeat scroll center top transparent !important
+      background: image-url("application/btn-sign-up.png") no-repeat scroll center top transparent !important
       border: medium none !important
       clear: both
       cursor: pointer
