--- a/app/assets/stylesheets/application/thanks.sass
+++ b/app/assets/stylesheets/application/thanks.sass
@@ -13,7 +13,7 @@
       float: left
       margin-top: 20px
       a#print-voucher
-        background: image-url("print-voucher.png") no-repeat scroll center top transparent !important
+        background: image-url("application/print-voucher.png") no-repeat scroll center top transparent !important
         border: medium none !important
         clear: both
         cursor: pointer
