--- a/app/assets/stylesheets/application/search.sass
+++ b/app/assets/stylesheets/application/search.sass
@@ -1,5 +1,5 @@
 #search-top
-  background: image-url("box-search-top.png") no-repeat scroll center center transparent
+  background: image-url("application/box-search-top.png") no-repeat scroll center center transparent
   height: 118px
   width: 906px
 
@@ -41,13 +41,13 @@
     color: #777777
   a
     &#list
-      background: image-url("list-icon.png") no-repeat scroll left center transparent
+      background: image-url("application/list-icon.png") no-repeat scroll left center transparent
       color: #3D7996
       margin-right: 11px
       padding-left: 20px
       text-decoration: none
     &#map
-      background: image-url("maps-icon.png") no-repeat scroll left center transparent
+      background: image-url("application/maps-icon.png") no-repeat scroll left center transparent
       color: #999999
       padding-left: 20px
       padding-top: 2px
@@ -56,7 +56,7 @@
 /*Search*/
 
 #search
-  background: image-url("box-search.png") center no-repeat
+  background: image-url("application/box-search.png") center no-repeat
   height: 118px
   width: 906px
   img
@@ -72,14 +72,14 @@
       float: left
       width: 800px
     input#input-search
-      background: image-url("search-input-1.png") no-repeat scroll center center transparent
+      background: image-url("application/search-input-1.png") no-repeat scroll center center transparent
       border: medium none
       height: 31px
       padding-left: 10px
       width: 666px
       float: left
   input.btn-search
-    background: image-url("search-input-btn.png") no-repeat scroll center center transparent
+    background: image-url("application/search-input-btn.png") no-repeat scroll center center transparent
     border: medium none
     color: #FFFFFF
     cursor: pointer
@@ -97,7 +97,7 @@
     width: 787px
 
 .result-search, .result-unity
-  background: image-url("bg-result-search.png") repeat scroll 0 0 transparent
+  background: image-url("application/bg-result-search.png") repeat scroll 0 0 transparent
   border-radius: 10px 10px 10px 10px
   -webkit-border-radius: 10px 10px 10px 10px
   -moz-border-radius: 10px 10px 10px 10px
@@ -145,7 +145,7 @@
       -webkit-border-radius: 3px 3px 3px 3px
 
 input.btn-search-sign-in
-  background: image-url("register.png") no-repeat scroll center top transparent !important
+  background: image-url("application/register.png") no-repeat scroll center top transparent !important
   border: medium none !important
   clear: both
   cursor: pointer
