--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -7,7 +7,7 @@
     %meta{:content => "pt-br", "http-equiv" => "content-language"}/
     %link{:href => "/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}/
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans:400,700", :rel => "stylesheet", :type => "text/css"}/
-    /= javascript_include_tag "home"
+    = javascript_include_tag "admin"
     = stylesheet_link_tag "admin"
     = csrf_meta_tags
     
@@ -28,14 +28,10 @@
               %li
                 %a.button-link{:href => "#", :rel => "tooltip", :title => "This is my title!"} view website
               %li
-                %a.button-link{:href => "#", :rel => "tooltip", :title => "And this is Sparta!"} logout
+                = link_to 'Sair', destroy_user_session_path, :method => :delete, :class => 'button-link'
       / /User Info
       / Main Navigation
       %nav#main-nav
-        %p.notice
-          = notice
-        %p.alert
-          = alert
         %ul
           %li
             %a.dashboard.no-submenu{:href => "index.html", :title => ""} Dashboard
@@ -68,6 +64,12 @@
         %header
           %h2 Chromatron Admin Theme
         %section
+          .notification.success
+            %a.close-notification{:href => "#", :rel => "tooltip", :title => "Hide Notification"} x
+            %p
+              %strong Error notification
+              = alert
+              = notice
           = yield
       .notification.error
         %a.close-notification{:href => "#", :rel => "tooltip", :title => "Hide Notification"} x
