--- a/app/views/layouts/sign_in.html.haml
+++ b/app/views/layouts/sign_in.html.haml
@@ -8,34 +8,16 @@
     %link{:href => "/favicon.ico", :rel => "shortcut icon", :type => "image/x-icon"}/
     %link{:href => "http://fonts.googleapis.com/css?family=Droid+Sans:400,700", :rel => "stylesheet", :type => "text/css"}/
     /= javascript_include_tag "home"
-    = stylesheet_link_tag "admin/style"
+    = stylesheet_link_tag "admin"
     = csrf_meta_tags
     
   %body.login
-    %p.notice
-      = notice
-    %p.alert
-      = alert
-    = yield  
-    %section{:role => "main"}
+    %section{:role => "main"}          
       %a{:href => "index.html", :title => "Back to Homepage"}
-      %article#login-box
-        %p Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse et dignissim metus. Maecenas id augue ac metus tempus aliquam.
-        %form{:action => "index.html"}
-          %fieldset
-            %dl
-              %dt
-                %label Login
-              %dd
-                %input.large{:type => "text"}
-              %dt
-                %label Password
-              %dd
-                %input.large{:type => "password"}
-          %button.right{:type => "submit"} Log in
+      = yield
           
       .notification.error
         %a.close-notification{:href => "#", :rel => "tooltip", :title => "Hide Notification"} x
         %p
           %strong Error notification
-          Lorem ipsum dolor sit amet, consectetur adipiscing elit. Proin vulputate, sapien quis fermentum luctus, libero.
+          = alert
