restrict user to franchise domain

--- a/app/views/admin/shared/_navigation.html.haml
+++ b/app/views/admin/shared/_navigation.html.haml
@@ -5,7 +5,7 @@
   %section#user-info
     %img{:alt => "Sample User Avatar", :src => "/assets/admin/sample_user.png"}
       %div
-        %a{:href => "#", :title => "Account Settings and Profile Page"} Joe Tester
+        %a= link_to current_user.email, '#'
         %em Administrator
         %ul
           %li
