validations working on safari but buggy on chrome

--- a/app/views/home/unities.html.haml
+++ b/app/views/home/unities.html.haml
@@ -1,6 +1,6 @@
 #align
   #search
-    = image_tag "search-icon.png", height: 66, width: 66
+    = image_tag "application/search-icon.png", height: 66, width: 66
     #search-alignment-form
       %span Refine sua busca:
       = form_tag lead_path(@lead), method: "PUT", id: "search-form" do
