--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -20,12 +20,11 @@
       = f.input :name, input_html: { class: "input-1" }
       = f.input :email, input_html: { class: "input-1" }
       = f.inputs phone: "Telefone", id: "phone" do
-        = f.input :phone_code, wrapper_html: { class: "phone_code" }
+        = f.input :phone_code, wrapper_html: { class: "phone_code" }, input_html: { maxlength: 2 }
         = f.input :phone, wrapper_html: { class: "phone" }, input_html: { maxlength: 9 }
       = f.input :address_search,
                                   as: :string, 
-                                  input_html: { id: "address-search-field", 
-                                                class: "input-1 autocomplete",
+                                  input_html: { class: "input-1 autocomplete",
                                                 placeholder: "Digite seu endereço, bairro, rua ou cep"}
 
       = f.action :submit, label: :subscribe, button_html: { class: "btn" }, wrapper_html: { class: "btn-label" }
@@ -60,7 +59,7 @@
 :javascript
 
   function initialize() {
-    var input = document.getElementById('address-search-field');
+    var input = document.getElementById('lead_address_search');
     var options = {
       types: ['geocode'],
       componentRestrictions: {country: 'br'}
