solved buggy chrome validation and added zipcode address lookup

--- a/app/views/home/index.html.haml
+++ b/app/views/home/index.html.haml
@@ -72,8 +72,9 @@
         geocoder.geocode({ 'address': input.value }, function(results, status) {
           if (status == google.maps.GeocoderStatus.OK) {
             console.log(results);
-  					$('#lead_latitude').val(results[0].geometry.location.Xa)
-  					$('#lead_longitude').val(results[0].geometry.location.Ya)
+  					$('#lead_latitude').val(results[0].geometry.location.Xa);
+  					$('#lead_longitude').val(results[0].geometry.location.Ya);
+  					$(input).change();
           }
         });
 
